# ConsoleGraphics

./: .gitignore  CMakeLists.txt  ConsoleGraph.sln  README.md
ConsoleGraph/: ConsoleGraph.cpp  ConsoleGraph.vcxproj  ConsoleGraph.vcxproj.filters  ImgToAsciiConverter.cpp  ImgToAsciiConverter.h  ScreenSettings.cpp  ScreenSettings.h  ascii.txt
lib/InteractiveConsoleMenu/: README.md
src/: CMakeLists.txt  ConsoleGraph.cpp  ImgToAsciiConverter.cpp  ImgToAsciiConverter.h  ScreenSettings.cpp  ScreenSettings.h  VideoToAscii.cpp  VideoToAscii.h  area.cpp  area.h
